# postgis-diesel

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  test_linestring.sqlite  test_multiline.sqlite  test_multipoint.sqlite  test_multipolygon.sqlite  test_point.sqlite  test_pointm.sqlite  test_pointz.sqlite  test_pointzm.sqlite  test_polygon.sqlite
.github/workflows/: check.yml  format.yml  postgres_only.yml  rust.yml  sqlite_only.yml
src/: errors.rs  ewkb.rs  functions.rs  functions_nullable.rs  geojson.rs  geometrycollection.rs  geometrycontainer.rs  lib.rs  linestring.rs  multiline.rs  multipoint.rs  multipolygon.rs  operators.rs  points.rs  polygon.rs  sql_types.rs  to_and_from_sql_geography.rs  to_and_from_sql_geometry.rs  types.rs  write_to_read_from_sql.rs
tests/: geom_accessors_functions_test.rs  integration_test.rs  test_sqlite_linestring.rs  test_sqlite_multiline.rs  test_sqlite_multipoint.rs  test_sqlite_multipolygon.rs  test_sqlite_point.rs  test_sqlite_pointm.rs  test_sqlite_pointz.rs  test_sqlite_pointzm.rs  test_sqlite_polygon.rs  topo_rel_functions_opt_test.rs  topo_rel_functions_test.rs
