[package]
name = "postgis_diesel"
version = "2.4.1"
authors = ["Vitaly Merenkov <vmrnkv@gmail.com>"]
edition = "2018"
description = "An extension for Diesel framework to support PostGIS geometry datatype."
homepage = "https://github.com/vitaly-m/postgis-diesel"
repository = "https://github.com/vitaly-m/postgis-diesel"
readme = "README.md"
keywords = ["PostGIS", "GIS", "GEO", "Diesel"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.2", features = ["postgres_backend", "with-deprecated"], default-features = false }
byteorder = "1.4"
serde = { version = "1.0", optional = true, features = ["derive"] }
schemars = { version = "0.8.20", optional = true }

[dev-dependencies]
diesel = { version = "2.2", features = ["postgres", "with-deprecated"], default-features = false }
dotenvy = "0.15"
serde_json = "1.0"

[features]
serde = ["dep:serde"]
serde_geojson = ["dep:serde"]
schemars = ["dep:schemars"]
